Restructured the HTML document to align footer correctly

--- a/Flask/static/main.css
+++ b/Flask/static/main.css
@@ -13,13 +13,18 @@ body {
 
 /* This continer currently holds all content,
     except for navbar and footer */
-.container {
+.wrapper {
     min-height: 94%;
     margin: 0;
     padding: 20px 0px; 
     width: 100%;
     background: #ffffff;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.container {
+    display: flow-root;
+    min-height: 100%;
 }
 
 /* h2 is used for big headings */
@@ -308,7 +313,7 @@ footer {
         width: 90%;
     }
 
-    .container {
+    .wrapper {
         min-height: 94%;
         margin: 0 auto;
         padding: 0;
@@ -331,7 +336,7 @@ footer {
         }
 
 
-        .container {
+        .wrapper {
             min-height: 94%;
             margin: 0 auto;
             padding: 20px 40px; 
@@ -417,7 +422,7 @@ footer {
     body {
         display: block;
     }
-    .container {
+    .wrapper {
         padding-top: 50px;
         width: 100%;
     }
